# libdummy

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
src/: .gitignore  Makefile.am
